# C-Programming

./: CMakeLists.txt
assignment_1/: areaOfTriangle.c  givenFormula.c  maxOfThree.c  minOfThree.c
assignment_2/: calculator_with_switch_case.c  cube_series.c  factorial.c  multiplication_table.c  prime-number.c  square_series.c
beecrowd_solutions/: 1000.c  1001.c  1002.c  1003.c  1004.c  1005.c  1006.c  1007.c  1008.c  1009.c  1010.c  1011.c  1012.c  1013.c  1014.c  1015.c
class1/: CMakeLists.txt  class_1.c  class_1_tasks.c
class2/: class_2.c
class3/: class_3.c
