cmake_minimum_required(VERSION 3.27)
project(C_Programing C)

set(CMAKE_C_STANDARD 11)

add_executable(1012 beecrowd_solutions/1012.c)
add_executable(1013 beecrowd_solutions/1013.c)
add_executable(1014 beecrowd_solutions/1014.c)
add_executable(1015 beecrowd_solutions/1015.c)
add_executable(class3 class3/class_3.c)
add_executable(square_series assignment_2/square_series.c)
add_executable(cube_series assignment_2/cube_series.c)
add_executable(factorial assignment_2/factorial.c)
add_executable(prime_number assignment_2/prime-number.c)
add_executable(calculator assignment_2/calculator_with_switch_case.c)